{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 439,
  "lineage": "4b1f1054-3994-1339-fd41-aebc772ccfea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:981498726118:internet-gateway/igw-045c519a9b905df41",
            "id": "igw-045c519a9b905df41",
            "owner_id": "981498726118",
            "tags": {
              "Name": "fastapi-app-dev-igw"
            },
            "tags_all": {
              "Name": "fastapi-app-dev-igw"
            },
            "vpc_id": "vpc-06b49b639d722e786"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:981498726118:route-table/rtb-0dc87df11858b0875",
            "id": "rtb-0dc87df11858b0875",
            "owner_id": "981498726118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045c519a9b905df41",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b49b639d722e786"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e351caf5e3f7c94",
            "route_table_id": "rtb-0dc87df11858b0875",
            "subnet_id": "subnet-0d9c9765d3b63341e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0618bb49f2936f803",
            "route_table_id": "rtb-0dc87df11858b0875",
            "subnet_id": "subnet-0fa28240c18bf899e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:981498726118:security-group/sg-0b330c8d58c2b2c6e",
            "description": "Lambda function security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS for Secrets Manager VPC endpoint",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow Lambda to connect to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0697b252c306519be"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0b330c8d58c2b2c6e",
            "ingress": [],
            "name": "fastapi-app-dev-lambda-sg",
            "name_prefix": "",
            "owner_id": "981498726118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-lambda-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b49b639d722e786"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:981498726118:security-group/sg-0697b252c306519be",
            "description": "Allow PostgreSQL access",
            "egress": [],
            "id": "sg-0697b252c306519be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b330c8d58c2b2c6e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "981498726118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b49b639d722e786"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:981498726118:security-group/sg-0aec3215bcc8635f2",
            "description": "Secrets Manager VPC endpoint security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aec3215bcc8635f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Lambda to use Secrets Manager endpoint",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b330c8d58c2b2c6e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "fastapi-app-dev-vpce-sg",
            "name_prefix": "",
            "owner_id": "981498726118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-vpce-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-vpce-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b49b639d722e786"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_egress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS for Secrets Manager VPC endpoint",
            "from_port": 443,
            "id": "sgrule-2157052938",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b330c8d58c2b2c6e",
            "security_group_rule_id": "sgr-020dd1f035256cf67",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_egress_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Lambda to connect to RDS",
            "from_port": 5432,
            "id": "sgrule-2723362161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b330c8d58c2b2c6e",
            "security_group_rule_id": "sgr-0ab925b86cf364676",
            "self": false,
            "source_security_group_id": "sg-0697b252c306519be",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1261155842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0697b252c306519be",
            "security_group_rule_id": "sgr-0c0dd24d74112d0c4",
            "self": false,
            "source_security_group_id": "sg-0b330c8d58c2b2c6e",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-4127523373",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0697b252c306519be",
            "security_group_rule_id": "sgr-0496104be66683542",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpce_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2430473925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0aec3215bcc8635f2",
            "security_group_rule_id": "sgr-0064c46c21f2876cb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpce_ingress_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Lambda to use Secrets Manager endpoint",
            "from_port": 443,
            "id": "sgrule-1280554794",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aec3215bcc8635f2",
            "security_group_rule_id": "sgr-07dd18ade6b726b72",
            "self": false,
            "source_security_group_id": "sg-0b330c8d58c2b2c6e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.vpc_endpoint",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:981498726118:subnet/subnet-0d9c9765d3b63341e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9c9765d3b63341e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981498726118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-public-1"
            },
            "vpc_id": "vpc-06b49b639d722e786"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:981498726118:subnet/subnet-0fa28240c18bf899e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa28240c18bf899e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981498726118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-public-2"
            },
            "vpc_id": "vpc-06b49b639d722e786"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:981498726118:vpc/vpc-06b49b639d722e786",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0166fbfc9e720f402",
            "default_route_table_id": "rtb-0ed3879f94c2669c6",
            "default_security_group_id": "sg-067df4bde77041b84",
            "dhcp_options_id": "dopt-0a2abe0a9cabcfd22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b49b639d722e786",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed3879f94c2669c6",
            "owner_id": "981498726118",
            "tags": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:981498726118:vpc-endpoint/vpce-0a57a9686618fc2c7",
            "dns_entry": [
              {
                "dns_name": "vpce-0a57a9686618fc2c7-hcrplyrr.secretsmanager.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-0a57a9686618fc2c7-hcrplyrr-ca-central-1a.secretsmanager.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-0a57a9686618fc2c7-hcrplyrr-ca-central-1b.secretsmanager.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "secretsmanager.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z04423102180BSUVA9DHN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a57a9686618fc2c7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-010d470e118221e6d",
              "eni-0a49f86c4e726278f"
            ],
            "owner_id": "981498726118",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aec3215bcc8635f2"
            ],
            "service_name": "com.amazonaws.ca-central-1.secretsmanager",
            "service_region": "ca-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.199",
                "subnet_id": "subnet-0d9c9765d3b63341e"
              },
              {
                "ipv4": "10.0.2.40",
                "subnet_id": "subnet-0fa28240c18bf899e"
              }
            ],
            "subnet_ids": [
              "subnet-0d9c9765d3b63341e",
              "subnet-0fa28240c18bf899e"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-secretsmanager-endpoint"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "fastapi-app-dev-secretsmanager-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06b49b639d722e786"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}